[tool.poetry]
name = "user-role-demo-dbs"
version = "0.1.0"
description = ""
authors = ["Pavel Vinnikov <vinnpavel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
bandit = "1.7.2"
mypy = "^0.961"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
